tests/language_modules/09_statements/valid/case_statement.vf
module CaseStatement

procedure main()
is
    let choice: Integer = 1
    case choice is
        when 1 =>
            check true
        when 2 =>
            check true
        default =>
            check true
    end case
end main

end CaseStatement