tests/language_modules/09_statements/invalid_semantics/duplicate_case_branch_value.vf
module DuplicateCaseBranchValue

procedure main()
is
    let choice: Integer = 1
    case choice is
        when 1 =>
            check true
        when 1 =>
            check true
        default =>
            check true
    end case
end main

end DuplicateCaseBranchValue